--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>sample-dam-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>sample dam parent</name>
-  <description>Capital One DAM</description>
+  <description>Sample DAM</description>
   <packaging>pom</packaging>
 
   <modules>
